<resources>
    <string name="app_name">MapRetrofitGlideSDP</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_add_anggota">Add Anggota</string>
    <string name="button_retrofit1">Retrofit 1.9</string>
    <string name="button_retrofit2">Retrofit 2.1</string>
    <string name="button_glide">Glide</string>
    <string name="textview_nama_addanggota">Nama</string>
    <string name="textview_alamat_addanggota">Alamat</string>
    <string name="textview_username_addanggota">Username</string>
    <string name="textview_password_addanggota">Password</string>
    <string name="textview_path_tambahanggota">Path Image</string>
    <string name="button_save_addanggota">Save</string>
    <string name="button_camera_tambahAnggota">Camera</string>
    <string name="button_browse_tambahAnggota">Browse</string>
    <string name="imageView_contentDescription">image from glide</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
</resources>
