<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tambah_anggota"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.triwayuprasetyo.mapretrofitglidesdp.TambahAnggotaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editText_nama_tambahAnggota"
            android:text="@string/textview_nama_addanggota" />

        <EditText
            android:id="@+id/editText_nama_tambahAnggota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editText_alamat_tambahAnggota"
            android:text="@string/textview_alamat_addanggota" />

        <EditText
            android:id="@+id/editText_alamat_tambahAnggota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editText_username_tambahAnggota"
            android:text="@string/textview_username_addanggota" />

        <EditText
            android:id="@+id/editText_username_tambahAnggota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editText_password_tambahAnggota"
            android:text="@string/textview_password_addanggota" />

        <EditText
            android:id="@+id/editText_password_tambahAnggota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textVisiblePassword" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_path_tambahanggota" />

        <EditText
            android:id="@+id/editText_pathImage_tambahAnggota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_camera_tambahAnggota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_camera_tambahAnggota" />

            <Button
                android:id="@+id/button_browse_tambahAnggota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_browse_tambahAnggota" />
        </LinearLayout>

        <Button
            android:id="@+id/button_save_tambahAnggota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_save_addanggota" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
