<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_anggota"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.triwayuprasetyo.mapretrofitglidesdp.AnggotaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ListView
                android:id="@+id/listview_anggota"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_add_anggota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_add_anggota" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_retrofit1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_retrofit1"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/button_retrofit2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_retrofit2"
                    android:layout_weight="1" />
            </LinearLayout>

            <Button
                android:id="@+id/button_glide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_glide" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
